[package]
name = "bit_seq"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18" }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
either = "1.8.1"

[dev-dependencies]
trybuild = "1.0.42"

[[test]]
name = "bseq_hex"
path = "tests/bseq_hex.rs"

[[test]]
name = "bseq_pass"
path = "tests/bseq_pass.rs"

[[test]]
name = "bseq_fail"
path = "tests/bseq_fail.rs"