[package]
name = "bit_seq"
version = "0.1.0"
authors = ["Johannes Zottele official@johannes-zottele.at"]
edition = "2021"

license = "MIT"
description = "A procedural macro for creating bit sequences."
repository = "https://github.com/Jozott00/bit_seq"
categories = ["encoding", "parser-implementations"]
keywords = ["bits", "macros", "bitmask", "proc-macro", "bit-manipulation"]
readme = "README.md"

[lib]
name = "bit_seq"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.18" }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
either = "1.8.1"

[dev-dependencies]
trybuild = "1.0.42"

# tests
[[test]]
name = "bseq_pass"
path = "tests/bseq_pass.rs"

[[test]]
name = "bseq_fail"
path = "tests/bseq_fail.rs"